[package]
name = "pinata-sdk"
version = "1.1.0"
keywords = ["ipfs", "api", "pinata"]
categories = ["api-bindings", "web-programming::http-client"]
description = "Rust SDK for the Pinata IPFS platform"
authors = ["Perfect Makanju <oss@perfects.engineering>"]
documentation = "https://docs.rs/pinata-sdk"
repository = "https://github.com/perfectmak/pinata-sdk"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
failure = { version = "0.1.8" }
log = "0.4.26"
derive_builder = "0.20.2"

[dev-dependencies]
insta = "1.42.2"
